[FIX] mail: hide author name of notifications on firefox
The author name of every notification is displayed when the
`o_hide_author` class is not set. In order to do so, the css
rule uses the `:has` pseudo-class. This is an issue since firefox
does not support it. This PR removes the usage of this pseudo-class.

--- a/addons/mail/static/src/core/common/thread.scss
+++ b/addons/mail/static/src/core/common/thread.scss
@@ -32,9 +32,3 @@
 .o-mail-NotificationMessage p {
     margin-bottom: 0;
 }
-
-.o-mail-NotificationMessage:has(.o_hide_author) {
-    & .o-mail-NotificationMessage-author {
-        display: none!important;
-    }
-}
